Age-calculation app: styles added to form and wrapper

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components{
   .wrap-corner{
-    border-bottom-right-radius: 50% !important;
+    border-bottom-right-radius: 110px !important;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
